Supporting study definitions without default groups and end_date filtering.

end_date is a replacement for expiry_date, which is deprecated by this change. The difference is that end_date is acts as a normal filter, and causes study to not be created when the date is past. expiry_date caused the study to be created, and forced to the default group.

This change introduces a generic default group name, which is used for the field trial API when a study doesn't specify one.

BUG=677976

Review-Url: https://codereview.chromium.org/2614443002
Cr-Commit-Position: refs/heads/master@{#441487}

Former-commit-id: 49d24a0cc2a73773f3ee72b4d242d6fad8c57254